syntax = "proto3";

package user;

option go_package = "./proto";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  uint32 id = 1;
}

message UserResponse {
  string name = 1;
}