syntax = "proto3";

package hello;

import "google/protobuf/empty.proto";

option go_package = "./proto";

service HelloService {
  rpc GetHello (google.protobuf.Empty) returns (HelloResponse);
}

message HelloResponse {
  string message = 1;
}